# final_version

./: .gitignore  Dockerfile  README.md  api.py  entities.html  main.py  pyproject.toml  requirements.txt  testing.py
body_extraction/: __init__.py
body_extraction/Serie_III/: doc_type_match.py  models.py  nlp_pipeline.py  org_windows.py  payload_utils.py  segmenter.py  subdivision.py  utils_text.py
body_extraction/Serie_IV/: extract_IV.py
body_extraction/Serie_I_II/: extract.py  normalization.py  types.py
pdf_markup/: README.md  __init__.py  cli.py  config.py  extractor.py  heuristics.py  pyproject.toml
relation_extractor/: __init__.py  relations_extractor.py  relations_extractor_serieIII.py
relation_extractor_02/: __init__.py
relation_extractor_02/sumario_III/: helper.py
relation_extractor_02/sumario_I_II_IV/: main.py
results/: __init__.py
results/serie_III/: main.py
results/serie_I_II_IV/: helper.py  main.py
spacy_modulo/: DocText.py  Entities.py  Paragraphs.py  __init__.py  get_nlp.py
spacy_modulo/SerieIV/: setupIV.py
split_text/: __init__.py  split_text.py  split_text_02.py
